Various Track-related enhancements
Checking whether a track is a load-failed/loading/etc special track now happens in Common.

Renamed EntryTypeToIconConverter to TrackToIconConverter, and added unit tests for it.

--- a/URY.BAPS.Client.Wpf/App.xaml
+++ b/URY.BAPS.Client.Wpf/App.xaml
@@ -13,7 +13,7 @@
             <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Resources/splashIcon.png" />
 
             <viewModel:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
-            <Converters:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
+            <Converters:TrackToIconConverter x:Key="EntryTypeToIconConverter" />
 
             <!-- Colours used throughout BAPS -->
             <SolidColorBrush x:Key="MainBg" Color="#FF002D5A" />
