Use UniformGrid for channels
This means that the channels, finally, expand-a-band-band to the right size.

--- a/URY.BAPS.Client.Wpf/MainWindow.xaml
+++ b/URY.BAPS.Client.Wpf/MainWindow.xaml
@@ -111,7 +111,7 @@
 
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <VirtualizingStackPanel IsItemsHost="True" Orientation="Horizontal" />
+                    <UniformGrid IsItemsHost="True" Rows="1" />
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
 
