--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -14,7 +14,7 @@ The main channel control.
              xmlns:wpf="clr-namespace:URY.BAPS.Client.Wpf"
              xmlns:behaviors="clr-namespace:URY.BAPS.Client.Wpf.Behaviors"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800" Width="360"
+             d:DesignHeight="450" d:DesignWidth="800" MinWidth="360"
              d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
     <UserControl.Resources>
         <Thickness x:Key="ChannelBarMargin">6px</Thickness>
