--- a/URY.BAPS.Client.Wpf/Walls/AudioWall.xaml
+++ b/URY.BAPS.Client.Wpf/Walls/AudioWall.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="URY.BAPS.Client.Wpf.AudioWall"
+﻿<Window x:Class="URY.BAPS.Client.Wpf.Walls.AudioWall"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
