--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -10,8 +10,8 @@ The main channel control.
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
              xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
-             xmlns:model="clr-namespace:URY.BAPS.Client.Common.Model;assembly=URY.BAPS.Client.Common"
              xmlns:behaviors="clr-namespace:URY.BAPS.Client.Wpf.Behaviors"
+             xmlns:playback="clr-namespace:URY.BAPS.Common.Model.Playback;assembly=URY.BAPS.Common.Model"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" MinWidth="360"
              d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
@@ -56,17 +56,17 @@ The main channel control.
                                 Header="Repeat a_ll"
                                 IsCheckable="True" IsChecked="{Binding IsRepeatAll, Mode=OneWay}"
                                 Command="{Binding SetRepeatModeCommand}"
-                                CommandParameter="{x:Static model:RepeatMode.All}" />
+                                CommandParameter="{x:Static playback:RepeatMode.All}" />
                             <MenuItem
                                 Header="Repeat _one"
                                 IsCheckable="True" IsChecked="{Binding IsRepeatOne, Mode=OneWay}"
                                 Command="{Binding SetRepeatModeCommand}"
-                                CommandParameter="{x:Static model:RepeatMode.One}" />
+                                CommandParameter="{x:Static playback:RepeatMode.One}" />
                             <MenuItem
                                 Header="Repeat _none"
                                 IsCheckable="True" IsChecked="{Binding IsRepeatNone, Mode=OneWay}"
                                 Command="{Binding SetRepeatModeCommand}"
-                                CommandParameter="{x:Static model:RepeatMode.None}" />
+                                CommandParameter="{x:Static playback:RepeatMode.None}" />
                             <Separator />
                             <MenuItem
                                 Header="_Show audio wall"
